--- a/index.html
+++ b/index.html
@@ -13,15 +13,14 @@
     <a href="./index.html">WebStudio</a>
       <ul>
         <li><a href="./index.html">Студия</a></li>
-        <li><a href="*">Портфолио</a></li>
-        <li>Контакты</li>
+        <li><a href="#">Портфолио</a></li>
+        <li><a href="#">Контакты</a></li>
       </ul>
-  
-      </nav>
+    </nav>
       <ul>
-    <p>info@devstudio.com</p>
-    <p>+38 096 111 11 11</p>
-    </ul>
+    <li><a href="mailto:">info@devstudio.com</a href></li>
+    <li><a href="+38 096 111 11 11">+38 096 111 11 11</a href></li>
+      </ul>
    </header>
 <main>
   <!--Section Главная-->
@@ -43,11 +42,10 @@
     <section>
       <h2>Чем мы занимаемся</h2>
         <ul>
-         <li><img src="./images/img010.jpg" widht="370" alt="изображение"/></li>
-         <img src="./images/img011.jpg" widht="370" 
-         <img src="./images/img012.jpg" widht="370" 
+         <li><img src="./images/img011.jpg" widht="370" alt="изображение"/></li>
+         <li><img src="./images/img012.jpg" widht="370" alt="изображение"/></li>
+         <li><img src="./images/img013.jpg" widht="370" alt="изображение"/></li>
         </ul>
-
     </section>
     <!--Section Team-->
     <section>
@@ -56,19 +54,26 @@
         <li><img src="./images/img110.jpg" width="270" alt="Дизайнер"/>
            <h3>Игорь Демьяненко</h3>
            <p>Product Designer</p></li>
-        <img src="images/img111.jpg" width="270"
-          <p><b>Ольга Репина</b>Frontend Developer</p>
-        <img src="images/img112.jpg" width="270" 
-          <p><b>Николай Тарасов</b> Marketing</p>
-        <img src="images/img113.jpg" width="270" 
-          <p><b>Михаил Ермаков</b>UI Designer</p>
+        <li><img src="images/img111.jpg" width="270" alt="Разработчик"/>
+           <h3>Ольга Репина</h3>
+           <p>Frontend Developer</p></li>
+        <li><img src="images/img112.jpg" width="270" alt="Маркетолог"/>
+           <h3>Николай Тарасов</h3>
+           <p>Marketing</p></li>
+        <li><img src="images/img113.jpg" width="270" alt="UI Дизайнер"/>
+           <h3>Михаил Ермаков</h3></li>
+           <p>UI Designer</p>
           </ul>
+     </section>
 </main>
-<footer>
-  <p>WebStudio</p>
+  <footer>
+    <a href="./index.html">WebStudio</a>
+    
   <address>г. Киев, пр-т Леси Украинки, 26</address>
-  <p>info@example.com</p>
-  <p>+38 099 111 11 11</p>
-</footer>
+    <ul>
+      <li><a href="mailto:">info@devstudio.com</a href></li>
+      <li><a href="+38 096 111 11 11">+38 096 111 11 11</a href></li>
+    </ul>
+ </footer>
 </body>
 </html>
