--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
 </main>
   <footer>
     <a href="./index.html">WebStudio</a>
-    
+
   <address>г. Киев, пр-т Леси Украинки, 26</address>
     <ul>
       <li><a href="mailto:">info@devstudio.com</a href></li>
-      <li><a href="+38 096 111 11 11">+38 096 111 11 11</a href></li>
+      <li><a href="tel:+380961111111">+38 096 111 11 11</a href></li>
     </ul>
  </footer>
 </body>
