Исправления после Валидатора

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
       </ul>
     </nav>
       <ul>
-    <li><a href="mailto:">info@devstudio.com</a href></li>
-    <li><a href="+38 096 111 11 11">+38 096 111 11 11</a href></li>
+    <li><a href="mailto:">info@devstudio.com</a></li>
+    <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
    </header>
 <main>
@@ -28,23 +28,23 @@
       <h1>Эффективные решения <br>для вашего бизнеса</h1>
         <button>Заказать услугу</button>
           <ul>
-            <li>Внимание к деталям</li>
-              Идейные соображения, а также<br> начало повседневной работы по<br> формированию позиции.
-            <li>Пунктуальность</li>
-              Задача организации, в особенности<br> же рамки и место обучения кадров<br> влечет за собой.
-            <li>Планирование</li>  
-              Равным образом консультация с<br> широким активом в значительной<br> степени обуславливает.
-            <li>Современные технологии</li>
-              Значимость этих проблем настолько<br> очевидна, что реализация плановых<br> заданий.
+            <li>Внимание к деталям
+              <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p></li>
+            <li>Пунктуальность
+              <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p></li>
+            <li>Планирование  
+              <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p></li>
+            <li>Современные технологии
+              <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p></li>
           </ul>
     </section>
     <!--Section Чем занимаются-->
     <section>
       <h2>Чем мы занимаемся</h2>
         <ul>
-         <li><img src="./images/img011.jpg" widht="370" alt="изображение"/></li>
-         <li><img src="./images/img012.jpg" widht="370" alt="изображение"/></li>
-         <li><img src="./images/img013.jpg" widht="370" alt="изображение"/></li>
+         <li><img src="./images/img011.jpg" alt="изображение1" width="370" height="294"/></li>
+         <li><img src="./images/img012.jpg" alt="изображение2" width="370" height="294"/></li>
+         <li><img src="./images/img013.jpg" alt="изображение3" width="370" height="294"/></li>
         </ul>
     </section>
     <!--Section Team-->
@@ -61,8 +61,8 @@
            <h3>Николай Тарасов</h3>
            <p>Marketing</p></li>
         <li><img src="images/img113.jpg" width="270" alt="UI Дизайнер"/>
-           <h3>Михаил Ермаков</h3></li>
-           <p>UI Designer</p>
+           <h3>Михаил Ермаков</h3>
+           <p>UI Designer</p></li>
           </ul>
      </section>
 </main>
@@ -71,8 +71,8 @@
 
   <address>г. Киев, пр-т Леси Украинки, 26</address>
     <ul>
-      <li><a href="mailto:">info@devstudio.com</a href></li>
-      <li><a href="tel:+380961111111">+38 096 111 11 11</a href></li>
+      <li><a href="mailto:">info@devstudio.com</a></li>
+      <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
     </ul>
  </footer>
 </body>
