--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <!--Section Главная-->
     <section >
       <h1>Эффективные решения <br>для вашего бизнеса</h1>
-        <button>Заказать услугу</button>
+        <button type="button">Заказать услугу</button>
           <ul>
             <li>Внимание к деталям
               <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p></li>
