--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   <footer>
     <a href="./index.html">WebStudio</a>
 
-  <address>г. Киев, пр-т Леси Украинки, 26</address>
+  <address>г. Киев,<br/> пр-т Леси Украинки,<br/> 26</address>
     <ul>
       <li><a href="mailto:">info@devstudio.com</a></li>
       <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
