--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -24,17 +24,24 @@
    </header>
 <main>
   <!--Section Главная-->
-    <section >
+    <section>
       <h1>Эффективные решения <br>для вашего бизнеса</h1>
         <button type="button">Заказать услугу</button>
+    </section>
+  <!--Section Наши сильные стороны-->
+    <section>
           <ul>
-            <li>Внимание к деталям
+            <li>
+              <h3>Внимание к деталям</h3>
               <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p></li>
-            <li>Пунктуальность
+            <li>
+              <h3>Пунктуальность</h3>
               <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p></li>
-            <li>Планирование  
+            <li>
+              <h3>Планирование</h3>  
               <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p></li>
-            <li>Современные технологии
+            <li>
+              <h3>Современные технологии</h3>
               <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p></li>
           </ul>
     </section>
@@ -69,11 +76,13 @@
   <footer>
     <a href="./index.html">WebStudio</a>
 
-  <address>г. Киев, пр-т Леси Украинки, 26</address>
+  <address>
     <ul>
+      <li><a href="Адрес">г. Киев, пр-т Леси Украинки, 26</a></li>
       <li><a href="mailto:">info@devstudio.com</a></li>
       <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
     </ul>
- </footer>
+  </address>
+  </footer>
 </body>
 </html>
