--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     </section>
   <!--Section Наши сильные стороны-->
     <section>
+      <h2>Наши сильные стороны</h2>
           <ul>
             <li>
               <h3>Внимание к деталям</h3>
